2008-10-01  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_insert)
	(hildon_app_menu_add_filter, remove_item_from_list)
	(hildon_app_menu_repack_filters, hildon_app_menu_finalize):
	Don't leak hidden items when the menu is destroyed.

2008-10-01  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_insert)
	(hildon_app_menu_reorder_child, hildon_app_menu_add_filter)
	(hildon_app_menu_set_columns, item_visibility_changed)
	(filter_visibility_changed, hildon_app_menu_repack_filters)
	(hildon_app_menu_repack_items):
	Repack items and filters separately.

	Don't repack all items, change only the ones that are needed to
	update the layout.

2008-10-01  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/Makefile.am: added hildon-touch-selector-column.h

2008-10-01  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/hildon-touch-selector.c: added the property "text-column" to the
	class HildonTouchSelectorColumn, and related get/set functions
	(_default_printf_func): updated to use "text-column" property
	* src/hildon-touch-selector-entry.c: mark as deprecated the property
	"text-column" in his documentation, as this is now included on
	HildonTouchSelectorColumn. The get/set_property can still be used,
	working as a wrapper to the concrete column "text-column" property
	(_text_column_modified): callback added in order to handle the signal
	"notify::text-column" of the concrete HildonTouchSelectorColumn
	(hildon_touch_selector_entry_get_text_column)
	(hildon_touch_selector_entry_set_text_column): Added documentation, and
	modified in order to use the HildonTouchSelectorColumn "text-column"
	property
	* src/hildon-time-selector.c:
	* src/hildon-date-selector.c:
	* examples/hildon-touch-selector-example.c
	* examples/hildon-touch-selector-multi-cells-example.c
	* examples/hildon-picker-button-multicolumn-example.c
	Set the right value to "text-column" property on the creation of a new